[package]
name = "wrappers_bench"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = []

[dependencies]
pgx = "=0.6.1"
#supabase-wrappers = "0.1"
supabase-wrappers = { path = "../wrappers/supabase-wrappers" }
#supabase-wrappers = { git = "https://github.com/edmcbane/wrappers", rev="1d3991b0614fd230cc7c060863d1a4b01bcfeed5" }

[dev-dependencies]
pgx-tests = "=0.6.1"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
debug = true
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
